@@ -5,11 +5,14 @@ Branch 3.23
 
 The following bugs have been fixed or resolved on this branch.
 
+202770  open fd at exit --log-socket=127.0.0.1:1500 with --track-fds=yes
+311655  --log-file=FILE leads to apparent fd leak
 453044  gbserver_tests failures in aarch64
 486180  [MIPS] 'VexGuestArchState' has no member named 'guest_IP_AT_SYSCALL'
 486293  memccpy false positives
 486569  linux inotify_init syscall wrapper missing POST entry in syscall_table
 487439  SIGILL in JDK11, JDK17
+488379  --track-fds=yes errors that cannot be suppressed with --xml-file=
 n-i-bz  aarch64 frinta and frinta vector instructions
 
 To see details of a given bug, visit
